--- a/identity/index.html
+++ b/identity/index.html
@@ -567,10 +567,10 @@ As part of the e-Navigation process the Danish Maritime Authority had been worki
 <div class="sect2">
 <h3 id="signing-up"><a class="anchor" href="#signing-up"></a><a class="link" href="#signing-up">1.3. Signing up</a></h3>
 <div class="paragraph">
-<p>In order to get an organization, its users and any ships the organization might own on to the MCP, the organization needs to perform a signup process. The process is currently manual. To start the process, please fill out the <a href="https://management.maritimecloud.net/#/apply">registration form</a>.</p>
+<p>In order to get an organization, its users and any ships the organization might own on to the MCP, the organization needs to perform a signup process. The process is currently manual. To start the process, please fill out the <a href="https://management.maritimeconnectivity.net/#/apply">registration form</a>.</p>
 </div>
 <div class="paragraph">
-<p>Once your organization has been approved you will have access to MCP and its services. You should probably start by looking at the <a href="https://management.maritimecloud.net/">Management Portal</a>. See the <a href="http://manual.maritimeconnectivity.net/">manual</a> for how to use it.</p>
+<p>Once your organization has been approved you will have access to MCP and its services. You should probably start by looking at the <a href="https://management.maritimeconnectivity.net/">Management Portal</a>. See the <a href="http://manual.maritimeconnectivity.net/">manual</a> for how to use it.</p>
 </div>
 </div>
 <div class="sect2">
@@ -897,7 +897,7 @@ attributes, and credentials.</p>
 <p>If your organizations wishes to connect to MCP as an Identity Provider, to enable your uses to authenticate in MCP, please contact Oliver Haagh at <a href="mailto:oliver@dmc.international">oliver@dmc.international</a> in order to set it up. Note that currently you need to expose interfaces that supports either OpenID Connect or SAML2.</p>
 </div>
 <div class="paragraph">
-<p>Within the scope of the EfficienSea2 and STM validation projects, organizations can get users registered in special project Identity Providers, supplied by MCP. To join MCP please fill out the form at <a href="https://management.maritimecloud.net/#/apply">Apply</a>.</p>
+<p>Within the scope of the EfficienSea2 and STM validation projects, organizations can get users registered in special project Identity Providers, supplied by MCP. To join MCP please fill out the form at <a href="https://management.maritimeconnectivity.net/#/apply">Apply</a>.</p>
 </div>
 <div class="sect3">
 <h4 id="setup-oidc-idp"><a class="anchor" href="#setup-oidc-idp"></a><a class="link" href="#setup-oidc-idp">4.5.1. Setting up an OpenID Connect Identity Provider</a></h4>
@@ -1299,7 +1299,7 @@ attributes, and credentials.</p>
 </ol>
 </div>
 <div class="paragraph">
-<p>The endpoints for both the OCSP interface and the Certificate Revocation File are embedded into the certificates issued by MCP Identity Registry, and are currently <a href="https://api.maritimecloud.net/x509/api/certificates/crl" class="bare">https://api.maritimecloud.net/x509/api/certificates/crl</a> and <a href="https://api.maritimecloud.net/x509/api/certificates/ocsp" class="bare">https://api.maritimecloud.net/x509/api/certificates/ocsp</a>.</p>
+<p>The endpoints for both the OCSP interface and the Certificate Revocation File are embedded into the certificates issued by MCP Identity Registry, and are currently <a href="http://api.maritimeconnectivity.net/x509/api/certificates/crl" class="bare">http://api.maritimeconnectivity.net/x509/api/certificates/crl</a> and <a href="http://api.maritimeconnectivity.net/x509/api/certificates/ocsp" class="bare">http://api.maritimeconnectivity.net/x509/api/certificates/ocsp</a>.</p>
 </div>
 </div>
 <div class="sect2">
@@ -1355,7 +1355,7 @@ attributes, and credentials.</p>
 </div>
 <div class="literalblock">
 <div class="content">
-<pre>curl --verbose --location --cookie "" --key PrivateKey.pem --cert Certificate.pem 'https://maritimeid.maritimecloud.net/auth/realms/MaritimeCloud/protocol/openid-connect/auth?client_id=cert2oidc&amp;redirect_uri=http%3A%2F%2Flocalhost%3A99&amp;response_type=code&amp;kc_idp_hint=certificates&amp;scope=openid'</pre>
+<pre>curl --verbose --location --cookie "" --key PrivateKey.pem --cert Certificate.pem 'https://maritimeid.maritimeconnectivity.net/auth/realms/MCP/protocol/openid-connect/auth?client_id=cert2oidc&amp;redirect_uri=http%3A%2F%2Flocalhost%3A99&amp;response_type=code&amp;kc_idp_hint=certificates&amp;scope=openid'</pre>
 </div>
 </div>
 <div class="paragraph">
@@ -1374,7 +1374,7 @@ attributes, and credentials.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Address of the authentication endpoint: <code>https://maritimeid.maritimecloud.net/auth/realms/MaritimeCloud/protocol/openid-connect/auth</code></p>
+<p>Address of the authentication endpoint: <code>https://maritimeid.maritimeconnectivity.net/auth/realms/MCP/protocol/openid-connect/auth</code></p>
 </li>
 <li>
 <p>Parameters: <code>client_id=cert2oidc&amp;redirect_uri=http%3A%2F%2Flocalhost&amp;response_type=code&amp;kc_idp_hint=certificates&amp;scope=openid</code>. These can be also be broken down:</p>
@@ -1422,7 +1422,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 <div class="literalblock">
 <div class="content">
-<pre>curl --data "grant_type=authorization_code&amp;client_id=cert2oidc&amp;code=uss.Yw6k4rXOJiR6IF4a2Y7tYC1-Eqoo8dHSUwjfuIFDfpI.543a63db-9d22-45f7-85b6-a258059c0825.6826c662-6b68-423a-a248-71bd3e69dab0&amp;redirect_uri=http%3A%2F%2Flocalhost%3A99" https://maritimeid.maritimecloud.net/auth/realms/MaritimeCloud/protocol/openid-connect/token</pre>
+<pre>curl --data "grant_type=authorization_code&amp;client_id=cert2oidc&amp;code=uss.Yw6k4rXOJiR6IF4a2Y7tYC1-Eqoo8dHSUwjfuIFDfpI.543a63db-9d22-45f7-85b6-a258059c0825.6826c662-6b68-423a-a248-71bd3e69dab0&amp;redirect_uri=http%3A%2F%2Flocalhost%3A99" https://maritimeid.maritimeconnectivity.net/auth/realms/MCP/protocol/openid-connect/token</pre>
 </div>
 </div>
 <div class="paragraph">
@@ -1466,7 +1466,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 <div class="literalblock">
 <div class="content">
-<pre>curl -H "Authorization: Bearer eyJhbGciOiJ...uXoHudIM1yiDBYj8g" https://api.maritimecloud.net/oidc/api/org/DMA</pre>
+<pre>curl -H "Authorization: Bearer eyJhbGciOiJ...uXoHudIM1yiDBYj8g" https://api.maritimeconnectivity.net/oidc/api/org/DMA</pre>
 </div>
 </div>
 <div class="paragraph">
@@ -1474,7 +1474,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 <div class="literalblock">
 <div class="content">
-<pre>curl --data "grant_type=refresh_token&amp;client_id=cert2oidc&amp;refresh_token=eyJhbGciOiJ...iv7rKSa__IKy983Gg" https://maritimeid.maritimecloud.net/auth/realms/MaritimeCloud/protocol/openid-connect/token</pre>
+<pre>curl --data "grant_type=refresh_token&amp;client_id=cert2oidc&amp;refresh_token=eyJhbGciOiJ...iv7rKSa__IKy983Gg" https://maritimeid.maritimeconnectivity.net/auth/realms/MCP/protocol/openid-connect/token</pre>
 </div>
 </div>
 <div style="page-break-after: always;"></div>
@@ -1787,7 +1787,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-06-30 13:01:02 +0200
+Last updated 2020-10-15 12:09:08 +0200
 </div>
 </div>
 <script type="text/x-mathjax-config">
